--- a/package.json
+++ b/package.json
@@ -28,14 +28,11 @@
     "axios": "^0.18.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.4",
-    "cwait": "^1.1.1",
     "mysql": "^2.15.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
-    "sleep-promise": "^8.0.1",
     "typeorm": "^0.2.7",
-    "typescript": "^2.8.0",
-    "ws": "^3.1.0"
+    "typescript": "^2.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
