--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.4",
+    "cwait": "^1.1.1",
     "mysql": "^2.15.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
